fixes, inc using js to size post/project header to prevent gaps

--- a/assets/styles/src/style.css
+++ b/assets/styles/src/style.css
@@ -850,6 +850,7 @@ html, body, .dc-site-contents, .layer{
 }
 .theme .theme--section__research ul li:before{
 	content: attr(data-li-number) " ";
+	filter: blur(0); /*to make sure it has same weight as <li>s in Safari*/
 	width: 1.7em;
 	display: block;
 	position: absolute;
@@ -1498,24 +1499,32 @@ html, body, .dc-site-contents, .layer{
 	}
 		.quadrant-section.project-section__description header,
 		.quadrant-section.post-section__contents header{
-			position: -webkit-sticky;
-			position: sticky;
-			top: -0.05rem;
-			margin-top: -2rem;
-    	margin-left: -1rem;
-
+			position: fixed;
+			top: 0;
 			padding: 0.67em 1rem 0 1rem;
 			width: calc( 100% + 2rem );
 			box-sizing: border-box;
 			background: #FFFFFF;
 			border-bottom: 1px solid #000000;
+			border-left: 1px solid #000000;
+			border-right: none;
 			-webkit-box-shadow: 0px 0px 8px 2px rgba(120,120,120,0.2), inset -2px -2px 8px -2px rgba(120,120,120,0.2);
 				 -moz-box-shadow: 0px 0px 8px 2px rgba(120,120,120,0.2), inset -2px -2px 8px -2px rgba(120,120,120,0.2);
 				 			box-shadow: 0px 0px 8px 2px rgba(120,120,120,0.2), inset -2px -2px 8px -2px rgba(120,120,120,0.2);
 		}
+		.quadrant-section.project-section__description[data-section-span="w"] header,
+		.quadrant-section.post-section__contents[data-section-span="w"] header{
+			border-right: 1px solid #000000;
+			border-left: none;
+		}
+		.quadrant-section[data-proportion=small].project-section__description .wysiwyg,
+		.quadrant-section[data-proportion=small].post-section__contents .wysiwyg{
+			padding-top: 1rem;
+		}
+
 		.quadrant-section.project-section__description .wysiwyg,
 		.quadrant-section.post-section__contents .wysiwyg{
-			padding-top: 1.67em;
+			padding-top: 2.45rem;
 		}
 		/* firefox specific sticky header - something weird btwn it and chrome otherwise*/
 		html.b-FFX .quadrant-section.project-section__description header,
@@ -1755,6 +1764,9 @@ html, body, .dc-site-contents, .layer{
 		left: 0;
 		right: 0;
 		transform: translateY( -50% );
+		opacity: 0;
+		pointer-events: none;
+
 	}
 
 		.handle__y:after{
